--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.sunset::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(243.4deg, rgba(153, 101, 14, 0.64) 50.45%, rgba(153, 101, 14, 0.60) 100%);
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.night::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(243.4deg, rgba(37, 59, 176, 0.64) 50.45%, rgba(37, 59, 176, 0.60) 100%);
 }
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.romentic::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(243.4deg, rgba(126, 40, 128, 0.64) 50.45%, rgba(126, 40, 128, 0.60) 100%);
+}
+.reading::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(243.4deg, rgba(148, 145, 142, 0.64) 50.45%, rgba(148, 145, 142, 0.60) 100%);
 }
